cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
set(CMAKE_XXX_STANDARD,11)
project(point_height_method)
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIR})
add_definitions(${PCL_DEFINITIONS})
add_executable(point_height_method main.cpp)
target_link_libraries(point_height_method ${PCL_LIBRARIES})